--- a/jdbc-web-p1/WebContent/contact-us.html
+++ b/jdbc-web-p1/WebContent/contact-us.html
@@ -14,14 +14,18 @@
 <script
 	src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
 </head>
 <body>
 	<div class="container">
 
 		<nav class="nav nav-pills nav-justified">
-			<a class="nav-link" href="index.html">Home</a> <a class="nav-link"
-				href="login.html">Login</a> <a class="nav-link" href="register.html">Register</a>
-			<a class="nav-link active disabled" href="#">Contact Us</a>
+			<a class="nav-link active disabled" href="index.html">Home</a> <a
+				class="nav-link" href=login>Login</a> <a class="nav-link"
+				href="register.html">Register</a> <a class="nav-link"
+				href="enrollment-form.html">Enrollment</a> <a class="nav-link"
+				href="profile.html">Profile</a> <a class="nav-link"
+				href="#">Contact Us</a>
 		</nav>
 
 		<hr />
