--- a/jdbc-web-p1/WebContent/profile.html
+++ b/jdbc-web-p1/WebContent/profile.html
@@ -6,16 +6,16 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	crossorigin="anonymous">
-<title>Registration Page</title>
+<title>Profile Page</title>
 </head>
 <body>
 	<div class="container">
 		<nav class="nav nav-pills nav-justified">
 			<a class="nav-link active disabled" href="index.html">Home</a> <a
 				class="nav-link" href="login.html">Login</a> <a class="nav-link"
-				href="#">Register</a> <a class="nav-link"
+				href="register.html">Register</a> <a class="nav-link"
 				href="enrollment-form.html">Enrollment</a> <a class="nav-link"
-				href="profile.html">Profile</a> <a class="nav-link"
+				href="#">Profile</a> <a class="nav-link"
 				href="contact-us.html">Contact Us</a>
 		</nav>
 
@@ -23,40 +23,40 @@
 
 
 		<h1 align="center">Registration Page!!</h1>
-		<form action="register" method="POST">
+		<form>
 			<div class="form-row">
 				<div class="form-group col-md-6">
-					<label for="inputEmail4">Email</label> <input type="email" name="email"
+					<label for="inputEmail4">Email</label> <input type="email"
 						class="form-control" id="inputEmail4" placeholder="Email">
 				</div>
 				<div class="form-group col-md-6">
-					<label for="inputPassword4">Password</label> <input type="password" name="password"
+					<label for="inputPassword4">Password</label> <input type="password"
 						class="form-control" id="inputPassword4" placeholder="Password">
 				</div>
 			</div>
 			<div class="form-group">
-				<label for="inputAddress">Address</label> <input type="text" name="address"
+				<label for="inputAddress">Address</label> <input type="text"
 					class="form-control" id="inputAddress" placeholder="1234 Main St">
 			</div>
 			<div class="form-group">
-				<label for="inputAddress2">Address 2</label> <input type="text" name="address2"
+				<label for="inputAddress2">Address 2</label> <input type="text"
 					class="form-control" id="inputAddress2"
 					placeholder="Apartment, studio, or floor">
 			</div>
 			<div class="form-row">
 				<div class="form-group col-md-6">
-					<label for="inputCity">City</label> <input type="text" name="city"
+					<label for="inputCity">City</label> <input type="text"
 						class="form-control" id="inputCity">
 				</div>
 				<div class="form-group col-md-4">
-					<label for="inputState">State</label> <select id="inputState" name="state"
+					<label for="inputState">State</label> <select id="inputState"
 						class="form-control">
 						<option selected>Choose...</option>
-						<option value="Karnataka">Karnataka</option>
+						<option>...</option>
 					</select>
 				</div>
 				<div class="form-group col-md-2">
-					<label for="inputZip">Zip</label> <input type="text" name="zip"
+					<label for="inputZip">Zip</label> <input type="text"
 						class="form-control" id="inputZip">
 				</div>
 			</div>
@@ -64,18 +64,18 @@
 			<div class="form-group col-md-6">
 				<label for="inputZip">Gender</label> <br />
 				<div class="form-check form-check-inline">
-					<input class="form-check-input" type="radio" name="gender"
-						name="inlineRadioOptions" id="inlineRadio1" value="Male">
+					<input class="form-check-input" type="radio"
+						name="inlineRadioOptions" id="inlineRadio1" value="option1">
 					<label class="form-check-label" for="inlineRadio1">Male</label>
 				</div>
 				<div class="form-check form-check-inline">
-					<input class="form-check-input" type="radio" name="gender"
-						name="inlineRadioOptions" id="inlineRadio2" value="Female">
+					<input class="form-check-input" type="radio"
+						name="inlineRadioOptions" id="inlineRadio2" value="option2">
 					<label class="form-check-label" for="inlineRadio2">Female</label>
 				</div>
 				<div class="form-check form-check-inline">
-					<input class="form-check-input" type="radio" name="gender"
-						name="inlineRadioOptions" id="inlineRadio3" value="Others"
+					<input class="form-check-input" type="radio"
+						name="inlineRadioOptions" id="inlineRadio3" value="option3"
 						disabled> <label class="form-check-label"
 						for="inlineRadio3">Others</label>
 				</div>
@@ -84,19 +84,19 @@
 			<div class="form-group col-md-6">
 				<label for="inputZip">Courses</label> <br />
 				<div class="form-check form-check-inline">
-					<input class="form-check-input" type="checkbox" name="courses"
-						id="inlineCheckbox1" value="Core Java"> <label
+					<input class="form-check-input" type="checkbox"
+						id="inlineCheckbox1" value="option1"> <label
 						class="form-check-label" for="inlineCheckbox1">Core Java</label>
 				</div>
 				<div class="form-check form-check-inline">
-					<input class="form-check-input" type="checkbox" name="courses"
-						id="inlineCheckbox2" value="Advance Java"> <label
+					<input class="form-check-input" type="checkbox"
+						id="inlineCheckbox2" value="option2"> <label
 						class="form-check-label" for="inlineCheckbox2">Advance
 						Java</label>
 				</div>
 				<div class="form-check form-check-inline">
-					<input class="form-check-input" type="checkbox" name="courses"
-						id="inlineCheckbox3" value="Java frameworks"> <label
+					<input class="form-check-input" type="checkbox"
+						id="inlineCheckbox3" value="option3"> <label
 						class="form-check-label" for="inlineCheckbox3">Java
 						frameworks</label>
 				</div>
